2010-03-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Remove two last synchronous calls from front-end to InspectorBackend.
        
        https://bugs.webkit.org/show_bug.cgi?id=35720

        * src/js/InspectorControllerImpl.js:
        (devtools.InspectorBackendImpl):
        (devtools.InspectorBackendImpl.prototype.setPauseOnExceptionsState):

2010-03-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Remove sync access to resourceTrackingEnabled.

        https://bugs.webkit.org/show_bug.cgi?id=35693

        * src/js/DevTools.js:

2010-03-04  Darin Fisher  <darin@chromium.org>

        Reviewed by Pavel Feldman.

        Fix failing DevToolsSanityTest.TestResourceContentLength
        https://bugs.webkit.org/show_bug.cgi?id=35725

        http://trac.webkit.org/changeset/55466 missed one more spot
        where contentLength needed to be renamed resourceSize.

        * src/js/Tests.js:

2010-03-03  Garret Kelly  <gdk@chromium.org>

        Reviewed by Darin Fisher.

        Adding touch event type and point type. Tested against the try bots.
        https://bugs.webkit.org/show_bug.cgi?id=35691

        * public/WebInputEvent.h:
        (WebKit::WebInputEvent::):
        (WebKit::WebInputEvent::isTouchEventType):
        (WebKit::WebTouchEvent::WebTouchEvent):
        * public/WebTouchPoint.h: Added.
        (WebKit::WebTouchPoint::WebTouchPoint):
        (WebKit::WebTouchPoint::):

2010-03-02  Tony Chang  <tony@chromium.org>

        Reviewed by Darin Fisher.

        add a flag to WebURLResponse so we can identify multipart content
        https://bugs.webkit.org/show_bug.cgi?id=35628

        * public/WebURLResponse.h:
        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponse::isMultipartPayload):
        (WebKit::WebURLResponse::setIsMultipartPayload):

2010-03-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Fisher.
