@@ -1,3 +1,9 @@
+2010-03-04  Pavel Feldman  <pfeldman@chromium.org>
+
+        Not reviewed: chromium tests fix.
+
+        * src/js/Tests.js:
+
 2010-03-03  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
